src/common/generated/ExprParser.ts
// Generated from src/common/Expr.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { ExprVisitor } from "./ExprVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class ExprParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly T__23 = 24;
    public static readonly T__24 = 25;
    public static readonly T__25 = 26;
    public static readonly T__26 = 27;
    public static readonly T__27 = 28;
    public static readonly T__28 = 29;
    public static readonly T__29 = 30;
    public static readonly T__30 = 31;
    public static readonly T__31 = 32;
    public static readonly T__32 = 33;
    public static readonly T__33 = 34;
    public static readonly T__34 = 35;
    public static readonly T__35 = 36;
    public static readonly T__36 = 37;
    public static readonly T__37 = 38;
    public static readonly T__38 = 39;
    public static readonly T__39 = 40;
    public static readonly T__40 = 41;
    public static readonly T__41 = 42;
    public static readonly T__42 = 43;
    public static readonly T__43 = 44;
    public static readonly T__44 = 45;
    public static readonly T__45 = 46;
    public static readonly T__46 = 47;
    public static readonly T__47 = 48;
    public static readonly T__48 = 49;
    public static readonly T__49 = 50;
    public static readonly T__50 = 51;
    public static readonly T__51 = 52;
    public static readonly T__52 = 53;
    public static readonly T__53 = 54;
    public static readonly INT = 55;
    public static readonly FLOAT = 56;
    public static readonly STRING = 57;
    public static readonly WS = 58;
    public static readonly RULE_expr = 0;
    public static readonly RULE_broker = 1;
    public static readonly RULE_symbol = 2;
    public static readonly RULE_timeframe = 3;
    public static readonly RULE_hour = 4;
    public static readonly RULE_minute = 5;
    public static readonly RULE_open = 6;
    public static readonly RULE_high = 7;
    public static readonly RULE_low = 8;
    public static readonly RULE_close = 9;
    public static readonly RULE_volume = 10;
    public static readonly RULE_volume24h_in_usd = 11;
    public static readonly RULE_change = 12;
    public static readonly RULE_changeP = 13;
    public static readonly RULE_ampl = 14;
    public static readonly RULE_amplP = 15;
    public static readonly RULE_upper_shadow = 16;
    public static readonly RULE_upper_shadowP = 17;
    public static readonly RULE_lower_shadow = 18;
    public static readonly RULE_lower_shadowP = 19;
    public static readonly RULE_rsi = 20;
    public static readonly RULE_rsi_slope = 21;
    public static readonly RULE_ma = 22;
    public static readonly RULE_ema = 23;
    public static readonly RULE_macd_value = 24;
    public static readonly RULE_macd_signal = 25;
    public static readonly RULE_macd_histogram = 26;
    public static readonly RULE_bb_upper = 27;
    public static readonly RULE_bb_middle = 28;
    public static readonly RULE_bb_lower = 29;
    public static readonly RULE_rsi_phan_ki = 30;
    public static readonly RULE_macd_n_dinh = 31;
    public static readonly RULE_macd_slope = 32;
    public static readonly RULE_bullish_engulfing = 33;
    public static readonly RULE_bearish_engulfing = 34;
    public static readonly RULE_bullish_hammer = 35;
    public static readonly RULE_bearish_hammer = 36;
    public static readonly RULE_bullish = 37;
    public static readonly RULE_bearish = 38;
    public static readonly RULE_marsi = 39;
    public static readonly RULE_bull_bear_list = 40;
    public static readonly RULE_doji = 41;
    public static readonly RULE_comparisonOp = 42;
    public static readonly RULE_number = 43;

    public static readonly literalNames = [
        null, "'*'", "'/'", "'+'", "'-'", "'('", "')'", "'broker'", "'symbol'", 
        "'timeframe'", "'hour'", "'minute'", "'open'", "'high'", "'low'", 
        "'close'", "'volume'", "'volume24h_in_usd'", "'change'", "'change%'", 
        "'ampl'", "'ampl%'", "'upper_shadow'", "'upper_shadow%'", "'lower_shadow'", 
        "'lower_shadow%'", "'rsi'", "','", "'rsi_slope'", "'ma'", "'ema'", 
        "'macd_value'", "'macd_signal'", "'macd_histogram'", "'bb_upper'", 
        "'bb_middle'", "'bb_lower'", "'rsi_phan_ki'", "'macd_n_dinh'", "'macd_slope'", 
        "'bullish_engulfing'", "'bearish_engulfing'", "'bullish_hammer'", 
        "'bearish_hammer'", "'bullish'", "'bearish'", "'marsi'", "'bull_bear_list'", 
        "'doji'", "'>'", "'>='", "'<'", "'<='", "'=='", "'='"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        "INT", "FLOAT", "STRING", "WS"
    ];
    public static readonly ruleNames = [
        "expr", "broker", "symbol", "timeframe", "hour", "minute", "open", 
        "high", "low", "close", "volume", "volume24h_in_usd", "change", 
        "changeP", "ampl", "amplP", "upper_shadow", "upper_shadowP", "lower_shadow", 
        "lower_shadowP", "rsi", "rsi_slope", "ma", "ema", "macd_value", 
        "macd_signal", "macd_histogram", "bb_upper", "bb_middle", "bb_lower", 
        "rsi_phan_ki", "macd_n_dinh", "macd_slope", "bullish_engulfing", 
        "bearish_engulfing", "bullish_hammer", "bearish_hammer", "bullish", 
        "bearish", "marsi", "bull_bear_list", "doji", "comparisonOp", "number",
    ];

    public get grammarFileName(): string { return "Expr.g4"; }
    public get literalNames(): (string | null)[] { return ExprParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return ExprParser.symbolicNames; }
    public get ruleNames(): string[] { return ExprParser.ruleNames; }
    public get serializedATN(): number[] { return ExprParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, ExprParser._ATN, ExprParser.decisionsToDFA, new antlr.PredictionContextCache());
    }

    public expr(): ExprContext;
    public expr(_p: number): ExprContext;
    public expr(_p?: number): ExprContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new ExprContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 0;
        this.enterRecursionRule(localContext, 0, ExprParser.RULE_expr, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 137;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case ExprParser.T__4:
                {
                localContext = new ParensContext(localContext);
                this.context = localContext;
                previousContext = localContext;

                this.state = 89;
                this.match(ExprParser.T__4);
                this.state = 90;
                this.expr(0);
                this.state = 91;
                this.match(ExprParser.T__5);
                }
                break;
            case ExprParser.INT:
                {
                localContext = new IntContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 93;
                this.match(ExprParser.INT);
                }
                break;
            case ExprParser.FLOAT:
                {
                localContext = new FloatContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 94;
                this.match(ExprParser.FLOAT);
                }
                break;
            case ExprParser.STRING:
                {
                localContext = new StringContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 95;
                this.match(ExprParser.STRING);
                }
                break;
            case ExprParser.T__6:
                {
                localContext = new IBrokerContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 96;
                this.broker();
                }
                break;
            case ExprParser.T__7:
                {
                localContext = new ISymbolContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 97;
                this.symbol_();
                }
                break;
            case ExprParser.T__8:
                {
                localContext = new ITimeframeContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 98;
                this.timeframe();
                }
                break;
            case ExprParser.T__9:
                {
                localContext = new IHourContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 99;
                this.hour();
                }
                break;
            case ExprParser.T__10:
                {
                localContext = new IMinuteContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 100;
                this.minute();
                }
                break;
            case ExprParser.T__11:
                {
                localContext = new IOpenContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 101;
                this.open();
                }
                break;
            case ExprParser.T__12:
                {
                localContext = new IHighContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 102;
                this.high();
                }
                break;
            case ExprParser.T__13:
                {
                localContext = new ILowContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 103;
                this.low();
                }
                break;
            case ExprParser.T__14:
                {
                localContext = new ICloseContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 104;
                this.close();
                }
                break;
            case ExprParser.T__15:
                {
                localContext = new IVolumeContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 105;
                this.volume();
                }
                break;
            case ExprParser.T__16:
                {
                localContext = new IVolume24hInUSDContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 106;
                this.volume24h_in_usd();
                }
                break;
            case ExprParser.T__17:
                {
                localContext = new IChangeContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 107;
                this.change();
                }
                break;
            case ExprParser.T__18:
                {
                localContext = new IChangePContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 108;
                this.changeP();
                }
                break;
            case ExprParser.T__19:
                {
                localContext = new IAmplContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 109;
                this.ampl();
                }
                break;
            case ExprParser.T__20:
                {
                localContext = new IAmplPContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 110;
                this.amplP();
                }
                break;
            case ExprParser.T__21:
                {
                localContext = new IUpperShadowContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 111;
                this.upper_shadow();
                }
                break;
            case ExprParser.T__22:
                {
                localContext = new IUpperShadowPContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 112;
                this.upper_shadowP();
                }
                break;
            case ExprParser.T__23:
                {
                localContext = new ILowerShadowContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 113;
                this.lower_shadow();
                }
                break;
            case ExprParser.T__24:
                {
                localContext = new ILowerShadowPContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 114;
                this.lower_shadowP();
                }
                break;
            case ExprParser.T__25:
                {
                localContext = new IRSIContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 115;
                this.rsi();
                }
                break;
            case ExprParser.T__27:
                {
                localContext = new IRSISlopeContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 116;
                this.rsi_slope();
                }
                break;
            case ExprParser.T__28:
                {
                localContext = new IMAContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 117;
                this.ma();
                }
                break;
            case ExprParser.T__29:
                {
                localContext = new IEMAContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 118;
                this.ema();
                }
                break;
            case ExprParser.T__30:
                {
                localContext = new IMACD_valueContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 119;
                this.macd_value();
                }
                break;
            case ExprParser.T__31:
                {
                localContext = new IMACD_signalContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 120;
                this.macd_signal();
                }
                break;
            case ExprParser.T__32:
                {
                localContext = new IMACD_histogramContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 121;
                this.macd_histogram();
                }
                break;
            case ExprParser.T__33:
                {
                localContext = new IBB_upContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 122;
                this.bb_upper();
                }
                break;
            case ExprParser.T__34:
                {
                localContext = new IBB_midContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 123;
                this.bb_middle();
                }
                break;
            case ExprParser.T__35:
                {
                localContext = new IBB_lowContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 124;
                this.bb_lower();
                }
                break;
            case ExprParser.T__36:
                {
                localContext = new IRSI_phan_kiContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 125;
                this.rsi_phan_ki();
                }
                break;
            case ExprParser.T__37:
                {
                localContext = new IMACD_n_dinhContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 126;
                this.macd_n_dinh();
                }
                break;
            case ExprParser.T__38:
                {
                localContext = new IMACD_slopeContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 127;
                this.macd_slope();
                }
                break;
            case ExprParser.T__39:
                {
                localContext = new IBullish_engulfingContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 128;
                this.bullish_engulfing();
                }
                break;
            case ExprParser.T__40:
                {
                localContext = new IBearish_engulfingContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 129;
                this.bearish_engulfing();
                }
                break;
            case ExprParser.T__41:
                {
                localContext = new IBullish_hammerContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 130;
                this.bullish_hammer();
                }
                break;
            case ExprParser.T__42:
                {
                localContext = new IBearish_hammerContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 131;
                this.bearish_hammer();
                }
                break;
            case ExprParser.T__43:
                {
                localContext = new IBullishContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 132;
                this.bullish();
                }
                break;
            case ExprParser.T__44:
                {
                localContext = new IBearishContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 133;
                this.bearish();
                }
                break;
            case ExprParser.T__45:
                {
                localContext = new IMARSIContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 134;
                this.marsi();
                }
                break;
            case ExprParser.T__46:
                {
                localContext = new IBullBearListContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 135;
                this.bull_bear_list();
                }
                break;
            case ExprParser.T__47:
                {
                localContext = new IDojiContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 136;
                this.doji();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 151;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 149;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
                    case 1:
                        {
                        localContext = new MulDivContext(new ExprContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, ExprParser.RULE_expr);
                        this.state = 139;
                        if (!(this.precpred(this.context, 48))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 48)");
                        }
                        this.state = 140;
                        _la = this.tokenStream.LA(1);
                        if(!(_la === 1 || _la === 2)) {
                        this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 141;
                        this.expr(49);
                        }
                        break;
                    case 2:
                        {
                        localContext = new AddSubContext(new ExprContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, ExprParser.RULE_expr);
                        this.state = 142;
                        if (!(this.precpred(this.context, 47))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 47)");
                        }
                        this.state = 143;
                        _la = this.tokenStream.LA(1);
                        if(!(_la === 3 || _la === 4)) {
                        this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 144;
                        this.expr(48);
                        }
                        break;
                    case 3:
                        {
                        localContext = new ComparisonContext(new ExprContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, ExprParser.RULE_expr);
                        this.state = 145;
                        if (!(this.precpred(this.context, 46))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 46)");
                        }
                        this.state = 146;
                        this.comparisonOp();
                        this.state = 147;
                        this.expr(47);
                        }
                        break;
                    }
                    }
                }
                this.state = 153;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public broker(): BrokerContext {
        let localContext = new BrokerContext(this.context, this.state);
        this.enterRule(localContext, 2, ExprParser.RULE_broker);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 154;
            this.match(ExprParser.T__6);
            this.state = 155;
            this.match(ExprParser.T__4);
            this.state = 156;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public symbol_(): SymbolContext {
        let localContext = new SymbolContext(this.context, this.state);
        this.enterRule(localContext, 4, ExprParser.RULE_symbol);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 158;
            this.match(ExprParser.T__7);
            this.state = 159;
            this.match(ExprParser.T__4);
            this.state = 160;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public timeframe(): TimeframeContext {
        let localContext = new TimeframeContext(this.context, this.state);
        this.enterRule(localContext, 6, ExprParser.RULE_timeframe);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 162;
            this.match(ExprParser.T__8);
            this.state = 163;
            this.match(ExprParser.T__4);
            this.state = 164;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public hour(): HourContext {
        let localContext = new HourContext(this.context, this.state);
        this.enterRule(localContext, 8, ExprParser.RULE_hour);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 166;
            this.match(ExprParser.T__9);
            this.state = 167;
            this.match(ExprParser.T__4);
            this.state = 168;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public minute(): MinuteContext {
        let localContext = new MinuteContext(this.context, this.state);
        this.enterRule(localContext, 10, ExprParser.RULE_minute);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 170;
            this.match(ExprParser.T__10);
            this.state = 171;
            this.match(ExprParser.T__4);
            this.state = 172;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public open(): OpenContext {
        let localContext = new OpenContext(this.context, this.state);
        this.enterRule(localContext, 12, ExprParser.RULE_open);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 174;
            this.match(ExprParser.T__11);
            this.state = 175;
            this.match(ExprParser.T__4);
            this.state = 177;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 55) {
                {
                this.state = 176;
                this.match(ExprParser.INT);
                }
            }

            this.state = 179;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public high(): HighContext {
        let localContext = new HighContext(this.context, this.state);
        this.enterRule(localContext, 14, ExprParser.RULE_high);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 181;
            this.match(ExprParser.T__12);
            this.state = 182;
            this.match(ExprParser.T__4);
            this.state = 184;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 55) {
                {
                this.state = 183;
                this.match(ExprParser.INT);
                }
            }

            this.state = 186;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public low(): LowContext {
        let localContext = new LowContext(this.context, this.state);
        this.enterRule(localContext, 16, ExprParser.RULE_low);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 188;
            this.match(ExprParser.T__13);
            this.state = 189;
            this.match(ExprParser.T__4);
            this.state = 191;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 55) {
                {
                this.state = 190;
                this.match(ExprParser.INT);
                }
            }

            this.state = 193;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public close(): CloseContext {
        let localContext = new CloseContext(this.context, this.state);
        this.enterRule(localContext, 18, ExprParser.RULE_close);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 195;
            this.match(ExprParser.T__14);
            this.state = 196;
            this.match(ExprParser.T__4);
            this.state = 198;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 55) {
                {
                this.state = 197;
                this.match(ExprParser.INT);
                }
            }

            this.state = 200;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public volume(): VolumeContext {
        let localContext = new VolumeContext(this.context, this.state);
        this.enterRule(localContext, 20, ExprParser.RULE_volume);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 202;
            this.match(ExprParser.T__15);
            this.state = 203;
            this.match(ExprParser.T__4);
            this.state = 205;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 55) {
                {
                this.state = 204;
                this.match(ExprParser.INT);
                }
            }

            this.state = 207;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public volume24h_in_usd(): Volume24h_in_usdContext {
        let localContext = new Volume24h_in_usdContext(this.context, this.state);
        this.enterRule(localContext, 22, ExprParser.RULE_volume24h_in_usd);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 209;
            this.match(ExprParser.T__16);
            this.state = 210;
            this.match(ExprParser.T__4);
            this.state = 211;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public change(): ChangeContext {
        let localContext = new ChangeContext(this.context, this.state);
        this.enterRule(localContext, 24, ExprParser.RULE_change);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 213;
            this.match(ExprParser.T__17);
            this.state = 214;
            this.match(ExprParser.T__4);
            this.state = 216;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 55) {
                {
                this.state = 215;
                this.match(ExprParser.INT);
                }
            }

            this.state = 218;
            this.match(ExprParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public changeP(): ChangePContext {
        let localContext = new ChangePContext(this.context, this.state);
        this.enterRule(localContext, 26, ExprParser.RULE_changeP);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 220;
            this.match(ExprParser.T__18);
            this.state = 221;
            this.match(ExprParser.T__4);
            this.state = 223;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 55) {
                {
                this.state = 222;
                this.match(ExprParser.INT);
                }
            }
